fixed scrollbar

--- a/src/pages/style.css
+++ b/src/pages/style.css
@@ -3,7 +3,7 @@ Form.Label{
         width: 110px;
 }
 form{
-  width: 10%;
+  width: 60%;
   white-space: normal;
   word-wrap: break-word;
 }
@@ -15,7 +15,7 @@ form{
   flex-direction: column;
 }
 body {
-  width: 100%;
+  width: 91%;
   margin: 20px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -109,8 +109,8 @@ code {
   justify-content: center;
 }
 .box .btn-component {
-  
+    width: 110%;
+  justify-content: space-around;
   padding: 20px;
   display: flex;
-  justify-content: space-between;
 }
